vlib/v/checker/tests/array_of_generic_struct_init_err.vv
struct Item<T>{
	val T
}

fn main() {
	mut arr := []Item{}
}
